--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-firebase/app": "^16.4.4",
     "@react-native-firebase/auth": "^16.4.4",
+    "@react-native-firebase/firestore": "^16.4.5",
     "@react-native-firebase/perf": "^16.4.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -23,6 +24,7 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "yup": "^0.32.11"
