--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
-    "@react-native-firebase/app": "^16.4.4",
-    "@react-native-firebase/auth": "^16.4.4",
-    "@react-native-firebase/firestore": "^16.4.5",
-    "@react-native-firebase/perf": "^16.4.4",
+    "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/firestore": "^16.4.6",
+    "@react-native-firebase/perf": "^16.4.6",
+    "@react-native-firebase/storage": "^16.4.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.5",
     "expo-build-properties": "~0.4.0",
     "expo-dev-client": "~2.0.0",
+    "expo-document-picker": "~11.0.1",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
