--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-firebase/firestore": "^16.4.6",
     "@react-native-firebase/perf": "^16.4.6",
     "@react-native-firebase/storage": "^16.4.6",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.5",
     "expo-build-properties": "~0.4.0",
