--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.1",
+    "dayjs": "^1.11.6",
     "expo": "~47.0.5",
     "expo-build-properties": "~0.4.0",
     "expo-dev-client": "~2.0.0",
@@ -28,6 +29,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-modal": "^13.0.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "yup": "^0.32.11"
