--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/perf": "^16.4.6",
     "@react-native-firebase/storage": "^16.4.6",
     "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-navigation/material-top-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.1",
     "dayjs": "^1.11.6",
@@ -33,7 +34,9 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "yup": "^0.32.11"
+    "react-native-tab-view": "^3.3.2",
+    "yup": "^0.32.11",
+    "react-native-pager-view": "6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
