--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
     "@react-native-firebase/firestore": "^16.4.6",
+    "@react-native-firebase/functions": "^16.4.6",
     "@react-native-firebase/perf": "^16.4.6",
     "@react-native-firebase/storage": "^16.4.6",
     "@react-navigation/bottom-tabs": "^6.4.1",
@@ -30,13 +31,14 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-modal": "^13.0.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-pager-view": "6.0.1",
     "react-native-ratings": "^8.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.2",
-    "yup": "^0.32.11",
-    "react-native-pager-view": "6.0.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
