--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
     "@react-native-firebase/firestore": "^16.4.6",
