--- a/ios/ameenSecurity/GoogleService-Info.plist
+++ b/ios/ameenSecurity/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>876454143376-2s43dpod0g2ros7v31bl4evdu4himup0.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.876454143376-2s43dpod0g2ros7v31bl4evdu4himup0</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>876454143376-si4rv87e5j1vpto9mfk9gg7usrrdae8v.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCB2J4BLZsOgrx6t0Jnh1b24ooFGYJpeHA</string>
 	<key>GCM_SENDER_ID</key>
